@@ -7,6 +7,7 @@
 4. Option to have progress fill groove - default to true.
 5. If using Gtk2 >= 2.12, then respect the 'Gtk style scrollviews'
    setting.
+6. Respect KDE's shade sorted list column setting.
 
 0.58
 ----
